--- a/djangoapp/requirements.txt
+++ b/djangoapp/requirements.txt
@@ -2,3 +2,5 @@ Django>=5.1.6,<5.2
 psycopg2-binary>=2.9.10,<2.10
 Pillow>=11.3.0,<11.4
 django-summernote>=0.8.20.0,<0.8.21
+python-dotenv>=1.1.1,<1.2
+django-axes>=8.0.0,<8.1
